--- a/ClientApp/src/app/orders/invoice/invoice.component.html
+++ b/ClientApp/src/app/orders/invoice/invoice.component.html
@@ -24,6 +24,10 @@
                 <td>Referenz</td>
                 <td>{{ order.orderNumber}}</td>
             </tr>
+            <tr *ngIf="order.paymentMethod" style="border:0">
+                <td>Zahlungsart</td>
+                <td>{{ order.paymentMethod}}</td>
+            </tr>
         </table>
 
         <p></p>
